--- a/index.html
+++ b/index.html
@@ -497,17 +497,17 @@
             <h3>🎸 Morat</h3>
             <ul class="song-list">
               <li
-                onclick="playSong('morat', 'Cómo Te Atreves', '/music/morat/como-te-atreves.mp3', 'assets/images/morat.jpg')"
+                onclick="playSong('morat', 'Cómo Te Atreves', 'music/morat/como-te-atreves.mp3', 'assets/images/morat.jpg')"
               >
                 Cómo Te Atreves
               </li>
               <li
-                onclick="playSong('morat', 'Besos En Guerra', '/music/morat/besos-en-guerra.mp3', 'assets/images/morat.jpg')"
+                onclick="playSong('morat', 'Besos En Guerra', 'music/morat/besos-en-guerra.mp3', 'assets/images/morat.jpg')"
               >
                 Besos En Guerra
               </li>
               <li
-                onclick="playSong('morat', 'Cuando Nadie Ve', '/music/morat/cuando-nadie-ve.mp3', 'assets/images/morat.jpg')"
+                onclick="playSong('morat', 'Cuando Nadie Ve', 'music/morat/cuando-nadie-ve.mp3', 'assets/images/morat.jpg')"
               >
                 Cuando Nadie Ve
               </li>
@@ -517,17 +517,17 @@
             <h3>🖤💖 BLACKPINK</h3>
             <ul class="song-list">
               <li
-                onclick="playSong('blackpink', 'DDU-DU DDU-DU', '/music/blackpink/ddu-du.mp3', 'assets/images/blackpink.jpg')"
+                onclick="playSong('blackpink', 'DDU-DU DDU-DU', 'music/blackpink/ddu-du.mp3', 'assets/images/blackpink.jpg')"
               >
                 DDU-DU DDU-DU
               </li>
               <li
-                onclick="playSong('blackpink', 'Kill This Love', '/music/blackpink/kill-this-love.mp3', 'assets/images/blackpink.jpg')"
+                onclick="playSong('blackpink', 'Kill This Love', 'music/blackpink/kill-this-love.mp3', 'assets/images/blackpink.jpg')"
               >
                 Kill This Love
               </li>
               <li
-                onclick="playSong('blackpink', 'How You Like That', '/music/blackpink/how-you-like-that.mp3', 'assets/images/blackpink.jpg')"
+                onclick="playSong('blackpink', 'How You Like That', 'music/blackpink/how-you-like-that.mp3', 'assets/images/blackpink.jpg')"
               >
                 How You Like That
               </li>
